Added easier add/delete/view/change system
To go to that system go to ~/Products/IndexChange

--- a/Pages/Products/IndexCreate.cshtml
+++ b/Pages/Products/IndexCreate.cshtml
@@ -8,9 +8,9 @@
 
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" style="background-color:white; color:black">Create New</a>
 </p>
-<table class="table" style="color:black">
+<table class="table" style="color:black; background-color:white">
     <thead>
         <tr>
             <th>
