--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
             <div class="col-12 col-md" style="color:black">
                 <small class="d-block mb-3">&copy; 2020</small>
                 <small class="d-block mb-3">Created by UA92 Computer Science students</small>
-                <small class="d-block mb-3">Marks Rozanskis, Kaleem Ashraf and Henry Fallows</small>
+                <small class="d-block mb-3">Marks Rozanskis, Kaleem Ashraf, Joshua Thomas-Butler and Henry Fallows</small>
             </div>
             <div class="col-6 col-md">
                 <h5 style="color:black">Social networks</h5>
